IOT-597 add orgid on create device profile and detail page

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -601,7 +601,8 @@
       "PINGSLOTDR_PLACEHOLDER": "0",
       "PINGSLOTFREQ_PLACEHOLDER": "0",
       "CLASSCTIMEOUT_PLACEHOLDER": "0",
-      "ID": "Device profilens ID"
+      "ID": "Device profilens ID",
+      "ORGANIZATION": "Tilhørende organisation:"
     }
   },
   "USERS": {
