IOT-597 add org id to create payload decoder, table and detail page

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -208,6 +208,8 @@
     "SAVE": "Gem Payload Decoder",
     "NAME": "Navn: ",
     "ID": "Payload Decoder Id",
+    "ORGANIZATION": "Organisation",
+    "BELONGS-TO-ORGANIZATION": "Tilhørende organisation:",
     "DECODINGFUNCTION": "Decoder funktion",
     "DETAIL": {
       "DROPDOWN": "Håndter Payload Decoder",
