Fix af searchbar

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -34,6 +34,11 @@
     "MENU-ITEM-MISC": "Generelt",
     "DEVICE-MODEL": "Device Model"
   },
+  "TOPBAR":{
+    "SEARCH": {
+      "BUTTON": "Søg"
+    }
+  },
   "SEARCH": {
     "ICON": "",
     "TYPE": "Type",
