--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -348,6 +348,9 @@
     "GIVE-PAYLOADDECODER-METADATA": "Enheden Metadata",
     "GIVE-PAYLOADDECODER-TESTBUTTON": "Test din kode",
     "GIVE-PAYLOADDECODER-OUTPUT": "Preview af Payload Decoder Output",
+    "GIVE-PAYLOADDECODER-METADATA-PLACEHOLDER": "Vælg applikation og enhed førs",
+    "GIVE-PAYLOADDECODER-PAYLOAD-PLACEHOLDER": "Vælg applikation og enhed først",
+    "GIVE-PAYLOADDECODER-OUTPUT-PLACEHOLDER": "Tryk 'Test Koden' for at decode payload og metadata",
     "GIVE-ORGANISATION-NAME": "Navngiv organisation",
     "GIVE-ORGANISATION-NAME-PLACEHOLDER": "F.eks. 'Aarhus Kommune'",
     "OTAAAPPLICATIONKEY": "OTAA Applicationkey",
