--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -153,7 +153,7 @@
     "LOCATION": "Placering",
     "LAST-SEEN-AT": "Seneste aktivitet",
     "STATUS": "Status",
-    "INTERNALORGANIZATIONID": "Organisations Id"
+    "ORGANIZATION": "Organisation"
   },
   "DEVICE-MODEL": {
     "ID": "Id",
