restrukturering af payload decoder.

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -341,15 +341,15 @@
     "GIVE-DATATARGET-URL-PLACEHOLDER": "https://datatarget.dk/data",
     "GIVE-PAYLOADDECODER-NAME": "Navngiv Payload Decoder",
     "GIVE-PAYLOADDECODER-NAME-PLACEHOLDER": "F.eks. Kloak sensor decoder",
-    "GIVE-PAYLOADDECODER-DECODINGFUNCTION": "Payload Decoder funktion",
+    "GIVE-PAYLOADDECODER-DECODINGFUNCTION": "Payload Decoder funktion *",
     "GIVE-PAYLOADDECODER-CHOOSE-APPLICATION": "Vælg Applikation",
     "GIVE-PAYLOADDECODER-CHOOSE-DEVICE": "Vælg Enhed",
-    "GIVE-PAYLOADDECODER-PAYLOAD": "Enhedens Payload",
-    "GIVE-PAYLOADDECODER-METADATA": "Enheden Metadata",
+    "GIVE-PAYLOADDECODER-PAYLOAD": "Test med den valgte enheds payload",
+    "GIVE-PAYLOADDECODER-METADATA": "Test med den valgte enheds metadata",
     "GIVE-PAYLOADDECODER-TESTBUTTON": "Test din kode",
-    "GIVE-PAYLOADDECODER-OUTPUT": "Preview af Payload Decoder Output",
-    "GIVE-PAYLOADDECODER-METADATA-PLACEHOLDER": "Vælg applikation og enhed førs",
-    "GIVE-PAYLOADDECODER-PAYLOAD-PLACEHOLDER": "Vælg applikation og enhed først",
+    "GIVE-PAYLOADDECODER-OUTPUT": "Test preview af Payload Decoder Output",
+    "GIVE-PAYLOADDECODER-METADATA-PLACEHOLDER": "Vælg applikation og enhed først for at teste din decoder funktion med metadata",
+    "GIVE-PAYLOADDECODER-PAYLOAD-PLACEHOLDER": "Vælg applikation og enhed først for at teste din decoder funktion med payload data",
     "GIVE-PAYLOADDECODER-OUTPUT-PLACEHOLDER": "Tryk 'Test Koden' for at decode payload og metadata",
     "GIVE-ORGANISATION-NAME": "Navngiv organisation",
     "GIVE-ORGANISATION-NAME-PLACEHOLDER": "F.eks. 'Aarhus Kommune'",
