--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -141,14 +141,14 @@
     "QUESTION": {
       "GIVE-OPENDATADK-NAME": "OpenDataDK navn",
       "GIVE-OPENDATADK-NAME-PLACEHOLDER": "OpenDataDK navn",
-      "GIVE-OPENDATADK-TITLE": "Titel",
-      "GIVE-OPENDATADK-TITLE-PLACEHOLDER": "Kloaksensorer - Aarhus kommune",
+      "GIVE-OPENDATADK-RESOURCETITLE": "Titel",
+      "GIVE-OPENDATADK-RESOURCETITLE-PLACEHOLDER": "Kloaksensorer - Aarhus kommune",
       "GIVE-OPENDATADK-DESCRIPTION": "OpenDataDK Beskrivelse",
       "GIVE-OPENDATADK-DESCRIPTION-PLACEHOLDER": "OpenDataDK Beskrivelse",
-      "GIVE-OPENDATADK-TAGS": "Angiv kommasepareret nøgleord",
-      "GIVE-OPENDATADK-TAGS-PLACEHOLDER": "IOT, Sensor, LoRaWAN, Temeratur",
-      "GIVE-OPENDATADK-AUTHOR": "Forfatter",
-      "GIVE-OPENDATADK-AUTHOR-PLACEHOLDER": "Jens Jensen",
+      "GIVE-OPENDATADK-KEYWORDS": "Angiv kommasepareret nøgleord",
+      "GIVE-OPENDATADK-KEYWORDS-PLACEHOLDER": "IOT, Sensor, LoRaWAN, Temeratur",
+      "GIVE-OPENDATADK-AUTHORNAME": "Forfatter",
+      "GIVE-OPENDATADK-AUTHORNAME-PLACEHOLDER": "Jens Jensen",
       "GIVE-OPENDATADK-AUTHOR-EMAIL": "Forfatterens e-mail",
       "GIVE-OPENDATADK-AUTHOR-EMAIL-PLACEHOLDER": "jens@jensen.dk",
       "ACCEPT-TERMS-PART-ONE": "Jeg accepterer hermed de",
