IOT-929 - Fix af payload decoder errorhandling

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -348,9 +348,11 @@
     "GIVE-PAYLOADDECODER-METADATA": "Test med den valgte enheds metadata",
     "GIVE-PAYLOADDECODER-TESTBUTTON": "Test din kode",
     "GIVE-PAYLOADDECODER-OUTPUT": "Test preview af Payload Decoder Output",
-    "GIVE-PAYLOADDECODER-METADATA-PLACEHOLDER": "Vælg applikation og enhed først for at teste din decoder funktion med metadata",
-    "GIVE-PAYLOADDECODER-PAYLOAD-PLACEHOLDER": "Vælg applikation og enhed først for at teste din decoder funktion med payload data",
-    "GIVE-PAYLOADDECODER-OUTPUT-PLACEHOLDER": "Tryk 'Test Koden' for at decode payload og metadata",
+    "GIVE-PAYLOADDECODER-METADATA-PLACEHOLDER": "// Vælg applikation og enhed først for at \n// teste din decoder funktion med metadata",
+    "GIVE-PAYLOADDECODER-PAYLOAD-PLACEHOLDER": "// Vælg applikation og enhed først for at \n// teste din decoder funktion med payload data",
+    "GIVE-PAYLOADDECODER-METADATA-ERRORMESSAGE": "// Kan ikke finde noget metadata på den pågældende enhed. \n// Det kan enten skyldes at vi ikke har modtaget noget fra enheden eller der er ikke blevet tilknyttet en devicemodel til enheden",
+    "GIVE-PAYLOADDECODER-PAYLOAD-ERRORMESSAGE": "// Kan ikke finde noget payload på den pågældende enhed. \n// Det kan enten skyldes at vi ikke har modtaget noget fra enheden eller der er ikke blevet tilknyttet en devicemodel til enheden",
+    "GIVE-PAYLOADDECODER-OUTPUT-PLACEHOLDER": "// Tryk 'Test Koden' for at decode payload og metadata",
     "GIVE-ORGANISATION-NAME": "Navngiv organisation",
     "GIVE-ORGANISATION-NAME-PLACEHOLDER": "F.eks. 'Aarhus Kommune'",
     "OTAAAPPLICATIONKEY": "OTAA Applicationkey",
