--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -549,6 +549,7 @@
     "ONLY-ALLOWED-FOR-LORAWAN": "Handlinger er kun tilladt for LoRaWAN enheder",
     "DEVICE-IS-NOT-ACTIVATED-IN-CHIRPSTACK": "Enheden er ikke aktiveret i Chirpstack",
     "IS-USED": "Profilen kan ikke slettes da den er i brug.",
+    "USER-ALREADY-EXCISTS": "Brugeren findes allerede",
     "ID-INVALID-OR-ALREADY-IN-USE": "Gateway Id skal være unikt. En Gateway med det pågældende Id er allerede brug"
   },
   "PROFILES": {
