--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -375,7 +375,7 @@
     "GIVE-DATATARGET-URL-PLACEHOLDER": "https://datatarget.dk/data",
     "GIVE-PAYLOADDECODER-NAME": "Navngiv Payload Decoder",
     "GIVE-PAYLOADDECODER-NAME-PLACEHOLDER": "F.eks. Kloak sensor decoder",
-    "GIVE-PAYLOADDECODER-DECODINGFUNCTION": "Payload Decoder funktion *",
+    "GIVE-PAYLOADDECODER-DECODINGFUNCTION": "Payload Decoder funktion",
     "GIVE-PAYLOADDECODER-CHOOSE-APPLICATION": "Vælg Applikation",
     "GIVE-PAYLOADDECODER-CHOOSE-DEVICE": "Vælg Enhed",
     "GIVE-PAYLOADDECODER-PAYLOAD": "Test med den valgte enheds payload",
