IOT-936 - filtering of gateway table

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -111,6 +111,7 @@
     "STATS-TXPACKETSEMITTED": "Pakker Sendt",
     "STATS-TIMESTAMP": "Tidspunkt",
     "TABEL-TAB": "Listevisning",
+    "DROPDOWNFILTER": "Organisation filter",
     "MAP-TAB": "Kort",
     "ORGANIZATION": "Organisation"
   },
