map filtering by Org id

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -112,6 +112,7 @@
     "STATS-TIMESTAMP": "Tidspunkt",
     "TABEL-TAB": "Listevisning",
     "DROPDOWNFILTER": "Organisation filter",
+    "DROPDOWNDEFAULT": "Alle",
     "MAP-TAB": "Kort",
     "ORGANIZATION": "Organisation"
   },
