Iot device detail

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -533,6 +533,7 @@
       "FORMAT-ERROR": "Payload skal angives som Hexadecimal"
     },
     "DEVICEMODEL": "Device Model",
+    "DEVICEMODEL-ERROR": "Der er ikke tilknyttet nogen device model endnu",
     "DETAIL": "Detaljer",
     "DETAIL-TAB": "Datapakke",
     "DOWNLINK-TAB": "Downlink",
