handle button on iot-device, gateway, payload, device model

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -38,6 +38,10 @@
   "TOPBAR":{
     "SEARCH": {
       "BUTTON": "Søg"
+    },
+    "DROPDOWN": {
+      "EDIT": "Rediger",
+      "DELETE": "Slet"
     }
   },
   "SEARCH": {
