--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -176,7 +176,7 @@
       "LICENSE": "Licens",
       "AUTHORNAME": "Forfatterens navn",
       "AUTHOREMAIL": "Forfatterens email",
-      "URL": "endpoint til hentning af data",
+      "URL": "Endpoint til hentning af data",
       "NA": "Intet angivet"
     }
   },
